2003-08-12  Dan Winship  <danw@ximian.com>

	* libsoup/soup-auth.c: Make this an abstract GObject. Tweak some
	of the interfaces around a little bit.

	* libsoup/soup-auth-basic.c: subclass for Basic auth

	* libsoup/soup-auth-digest.c: subclass for Digest auth

	* libsoup/soup-auth-ntlm.c: subclass for NTLM auth. Move all of
	the code from soup-ntlm.c here, and make it private.

	* libsoup/soup-ntlm.c: gone

	* libsoup/soup-misc.h: Remove the definition of SoupAuthType from
	here, and change the signature of SoupAuthorizeFn.

	* libsoup/soup-context.c: Use g_object_unref to free auths, use
	methods instead of directly access private fields.

	* libsoup/soup-queue.c: Likewise

	* libsoup/soup-server-auth.c (soup_server_auth_free): Remove all
	NTLM references. We have no plans to implement server-side NTLM
	auth.

	* tests/auth-test.c (identify_auth): Update for auth api changes

2003-08-12  Dan Winship  <danw@ximian.com>

	* configure.in (GLIB): add gobject-2.0 to the PKG_CHECK_MODULES
	call

	* libsoup/soup-address.c: Make this a GObject.
	(soup_address_ref, soup_address_unref): Gone.
	(soup_address_copy): Gone. Wasn't being used anyway.

	* libsoup/soup-dns.c: Move all of the DNS code and caching stuff
	here from soup-address.c, so that soup-address doesn't need to
	worry about trying to cache zero-ref addresses.

	* libsoup/soup-socket.c: Make this a GObject. Use "guint"
	consistently for port numbers.
	(soup_socket_ref, soup_socket_unref): Gone.

	* libsoup/soup-private.h: Change the SoupSocket definition to be
	SoupSocketPrivate. (Still need to keep this here since soup-server
	pokes around in its internals.)
	(SOUP_MAKE_TYPE): Copied from gal's E_MAKE_TYPE.

	* libsoup/soup-server.c (read_done_cb, write_done_cb): Unref the
	reader/writer rather than leaking them.

	* libsoup/*: Use GObject methods for socket/address refcounting
	
	* tests/auth-test.c (main)
	* tests/timeserver.c (main): Call g_type_init.

	* tests/get.c (main): Call g_type_init.